# ghcjs-closure

./: Setup.hs  ghcjs-closure.cabal
Closure/: Paths.hs
lib/closure-library/: generate.sh
