name:                ghcjs-closure
version:             0.1.0.0
synopsis:            Google Closure Library and Compiler
homepage:            https://github.com/ghcjs/ghcjs-closure
license:             BSD3
license-file:        LICENSE
author:              Luite Stegeman
maintainer:          stegeman@gmail.com
category:            Web
build-type:          Custom
cabal-version:       >=1.10
data-dir:            lib
data-files:          closure-compiler/COPYING
                     closure-compiler/README
                     closure-compiler/compiler.jar
                     closure-library/AUTHORS
                     closure-library/LICENSE
                     closure-library/README
                     closure-library/pkg/*.pkg

source-repository head
  type:     git
  location: https://github.com/ghcjs/ghcjs-closure.git

library
  exposed-modules:   Closure.Paths
  other-modules:     Paths_ghcjs_closure
  build-depends:     base >= 4 && < 5
  default-language: Haskell2010